tests/compile_fail/repeated_long.stderr
error: The `long` attribute with value `abc` is repeated with another field. Try using the `no_short` and `short` attributes.
  --> $DIR/repeated_long.rs:10:9
   |
10 |     pub name2: bool,
   |         ^^^^^
